samples/_failures_safe/1761794114_5b16ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3625b00a.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_3625b00a.c:171:9: error: expected declaration or statement at end of input
  171 |         case TOKEN_STRING:
      |         ^~~~
./samples/SAFE/__tmp_3625b00a.c:171:9: error: expected declaration or statement at end of input
